# dvc-streamlit-example

./: .gitignore  Dockerfile  README.md  compute_metrics.py  dvc.yaml  generate_huge_csv_file.py  params.py  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
data/dataset/: .gitignore
data/evaluation/: .gitignore  confusion.html  metrics.json
data/train/: .gitignore  training_metrics.html  training_metrics.json
data/train/training_metrics_dvc_plots/: index.html
demo_code_samples/: 1-demo_streamlit_app.py  2-show_predictions_from_one_model.py  3-show_predictions_from_two_models.py  4-show_all_trained_model_parameters.py  5-model_inference.py  6-integrate_dvc_vega_visualization.py
docs/: 0_Setup.md  1_Basics.md  2_Pipelines.md  3_Experiments.md
logs/: .gitignore
scripts/: evaluate.py  params.py  split_dataset.py  train.py
st_scripts/: st_dashboard.py  st_evaluate_single_model.py  st_inference.py  st_list_model.py  st_utils.py
st_scripts/vega_graphs/: confusion_matrix.json
