[tool.poetry]
name = "dvc-streamlit-example"
version = "0.1.0"
description = ""
authors = ["Antoine Toubhans <antoinet@sicara.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
tensorflow = "^2.4"
pandas = "^1.3.4"
PyYAML = "^6.0"
numpy = "^1.21.4"
tqdm = "^4.62.3"
dvclive = "^0.4.5"
streamlit = "^1.2.0"
Pillow = "^8.4.0"
dvc = "^2.8.3"
flatten-dict = "^0.4.2"
GitPython = "^3.1.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
